--- a/main.css
+++ b/main.css
@@ -1,11 +1,12 @@
 :root {
-	--fg-color: #1f1f1f;
-	--bg-color: #dfdfdf;
-	--link-color: #1f5f9f;
-	--font: 'News Cycle', sans-serif;
-	--bit-font: 'Share Tech Mono', monospace;
-	--bit-index-font: 'Share Tech Mono', monospace;
-	--value-font: 'Share Tech Mono', monospace;
+	--fg-color: #333;
+	--bg-color: #fff; /*#dfdfdf;*/
+	--control-hover-bg-color: #ccc;
+	--link-color: #33f;
+	--font: sans-serif;
+	--bit-font: monospace;
+	--bit-index-font: monospace;
+	--value-font: monospace;
 	--int-sign-bit-color: #bfb;
 	--int-sign-bit-hover-color: #9d9;
 	--int-bit-color: #fbb;
@@ -101,6 +102,7 @@ table.bitset>tbody>tr>td>div.bit-index {
 	padding: 0.25em 0;
 	width: 2.5em;
 	text-align: center;
+	font-weight: bold;
 }
 
 table.bitset>tbody>tr>td>div.bit-index {
@@ -161,36 +163,6 @@ table.bitset>tbody>tr>td>div.float-bit:hover {
 	background-color: var(--float-bit-hover-color);
 }
 
-
-/*
-.field label {
-	display: inline-block;
-	width: 50%;
-}
-
-.field input {
-	display: inline-block;
-	width: 50%;
-}
-*/
-
-/*
-#field-values>label {
-	display: block;
-}
-#field-values>input {
-	width: 100%;
-	max-width: 24em;
-	font-family: var(--value-font);
-}
-*/
-
-/*
-sup {
-	vertical-align: 1.5em;
-}
-*/
-
 #sign-value {
 	width: 1.5em;
 	background-color: var(--float-sign-bit-color);
@@ -221,14 +193,6 @@ sup {
 	background-color: var(--float-bit-hover-color);
 }
 
-/*
-#sign-value[disabled],
-#exponent-value[disabled],
-#fraction-value[disabled] {
-	background-color: var(--bg-color);
-}
-*/
-
 #value-field-container.hide {
 	display: none;
 }
@@ -236,6 +200,7 @@ sup {
 #final-value-field {
 	width: 100%;
 	max-width: 25.5em;
+	text-align: center;
 }
 
 #final-value {
@@ -243,6 +208,8 @@ sup {
 	width: 100%;
 	background-color: var(--value-color);
 	text-align: center;
+	font-family: var(--value-font);
+	font-weight: bold;
 }
 
 #final-value:hover {
